vlib/v/checker/tests/oct_lit_has_space_err.out
vlib/v/checker/tests/oct_lit_has_space_err.v:2:18: error: unneeded spaces before digit `5`
    1 | fn main() {
    2 |     a := 0o1234  567
      |                  ^
    3 | }
